# webservice_as781

webservice_as781/: LICENSE  README.md  project.cabal
webservice_as781/src/: Computations.hs  Crawling.hs  Data.hs  HTML.hs  Main.hs  Parsing.hs  Types.hs  WebService.hs
