
name:                MyWebService
version:             0.1.0.0   
license:             MIT
license-file:        LICENSE
--author:              
--maintainer:          
-- copyright:           
-- category:            
-- build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.16

executable main
  main-is:             Main.hs
  other-modules:       Crawling, Parsing, Data, HTML, Computations, Types, WebService
  Ghc-Options:         -Wall -threaded -fno-warn-unused-do-bind
  language-extensions: DeriveGeneric, OverloadedStrings, PatternGuards
  build-depends:       base <4.8,
                       bytestring,
                       aeson,
                       happstack-server,
                       text,
                       blaze-html,
                       time,
                       old-locale,
                       containers,
                       acid-state,
                       mtl,
                       safecopy,
                       transformers,
                       http-conduit,
                       monad-control   


  hs-source-dirs:      src
  default-language:    Haskell2010


